--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,13 @@ h1 {  font-family: 'Montserrat', 'sans-serif';
     font-weight: 900;
 }
 
+h2 {
+    font-family: 'Montserrat', 'sans-serif';
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
 /* Navigation Bar */
 .navbar{
     padding-bottom: 4.5rem;
@@ -43,4 +50,60 @@ h1 {  font-family: 'Montserrat', 'sans-serif';
 .title-image{
     width: 60%;
     transform: rotate(25deg);
+}
+
+
+/* Features Section */
+
+#features{
+    padding: 7% 15%;
+}
+.features-box{
+    text-align: center;
+    padding: 5%;
+}
+
+.feature-icon{
+    color:#ef8172;
+    margin-bottom: 1rem;
+}
+
+.feature-icon:hover{
+    color:#ff4c68;
+}
+
+.features-desc{
+    font-family: 'Montserrat', 'sans-serif';
+    font-weight: 600;
+    /* line-height: 1.5rem; */
+}
+
+.features-text{
+    color:#8f8f8f;
+}
+
+/* Testimonial Section */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image{
+    width: 10%;
+    margin: 20px;
+    border-radius: 100%;
+}
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
 }
