--- a/css/styles.css
+++ b/css/styles.css
@@ -72,13 +72,13 @@ h2 {
     color:#ff4c68;
 }
 
-.features-desc{
+.feature-desc{
     font-family: 'Montserrat', 'sans-serif';
     font-weight: 600;
     /* line-height: 1.5rem; */
 }
 
-.features-text{
+.feature-text{
     color:#8f8f8f;
 }
 
