--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,5 @@
 body { font-family: 'Montserrat', 'sans-serif';}
 
-#title { background-color: #ff4c68;
-    color: #fff;
-}
-
-.container-fluid{ padding: 3% 15%;}
-
 
 h1 {  font-family: 'Montserrat', 'sans-serif';  
     font-size: 3.5rem;  
@@ -46,17 +40,34 @@ h2 {
     margin: 5% 3% 5% 0;
 }
 
-/* Title Image */
-.title-image{
-    width: 60%;
-    transform: rotate(25deg);
+/* Title Section */
+
+
+#title { background-color: #ff4c68;
+    color: #fff;
 }
 
+.container-fluid{ 
+    padding: 3% 15% 7%;
+}
+
+.col-above{
+    z-index: 1;
+}
+
+.title-image{
+    width: 18%;
+    transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
+}
 
 /* Features Section */
 
 #features{
+    background-color: #fff;
     padding: 7% 15%;
+    position: relative;
 }
 .features-box{
     text-align: center;
@@ -85,7 +96,6 @@ h2 {
 /* Testimonial Section */
 
 #testimonials{
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
     color: #fff;
@@ -106,4 +116,30 @@ h2 {
 .press-logo{
     width: 15%;
     margin: 20px 20px 50px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
+
+}
+
+/* Pricing Section */
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+    padding: 3% 2%;
+}
+
+@media (max-width: 1028px){
+    #title{
+        text-align: center;
+    }
+    .title-image{
+        position: static;
+        transform: rotate(0);
+        width: 60%;
+    }
 }
