--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ h2 {
     line-height: 1.5;
 }
 
+h3 {  font-family: 'Montserrat', 'sans-serif';  
+    font-size: 3.5rem;  
+    line-height: 1.5;  
+    font-weight: 900;
+    color: #fff;
+}
 /* Navigation Bar */
 .navbar{
     padding-bottom: 4.5rem;
@@ -131,6 +137,18 @@ h2 {
 
 .pricing-column{
     padding: 3% 2%;
+}
+
+/* Call to Action Section */
+#cta{
+    background-color: #ff4c68;
+    text-align: center;
+    padding: 3% 15% 7%;
+}
+
+/* Footer */
+#footer{
+    text-align: center;
 }
 
 @media (max-width: 1028px){
