--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,48 @@
-body { font-family: 'Montserrat', 'sans-serif';}
+body { 
+    font-family: 'Montserrat', 'sans-serif';
+    text-align: center;
+}
 
 
-h1 {  font-family: 'Montserrat', 'sans-serif';  
+/* Headings */
+h1,h2,h3,h4,h5,h6 {  
+    font-family: 'Montserrat', 'sans-serif';
+}
+
+.big-heading{
     font-size: 3.5rem;  
     line-height: 1.5;  
     font-weight: 900;
 }
 
-h2 {
-    font-family: 'Montserrat', 'sans-serif';
+.price-text{
     font-size: 3rem;
-    font-weight: 600;
     line-height: 1.5;
 }
 
-h3 {  font-family: 'Montserrat', 'sans-serif';  
-    font-size: 3.5rem;  
-    line-height: 1.5;  
-    font-weight: 900;
+.section-heading{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+/* Download Buttons */
+.download-button{
+    margin: 5% 3% 5% 0;
+}
+
+/* Containers */
+.container-fluid{ 
+    padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section{
     color: #fff;
+    background-color: #ff4c68;
+}
+
+.white-section{
+    background-color: #fff;
 }
 /* Navigation Bar */
 .navbar{
@@ -41,20 +65,10 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
     font-weight: 400;
 }
 
-/* Download Buttons */
-.download-button{
-    margin: 5% 3% 5% 0;
-}
-
 /* Title Section */
-
-
-#title { background-color: #ff4c68;
-    color: #fff;
-}
-
-.container-fluid{ 
-    padding: 3% 15% 7%;
+#title .container-fluid{
+    padding: 3% 15% 7%; 
+    text-align: left;
 }
 
 .col-above{
@@ -62,7 +76,7 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
 }
 
 .title-image{
-    width: 18%;
+    width: 22%;
     transform: rotate(25deg);
     position: absolute;
     right: 30%;
@@ -71,12 +85,9 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
 /* Features Section */
 
 #features{
-    background-color: #fff;
-    padding: 7% 15%;
     position: relative;
 }
 .features-box{
-    text-align: center;
     padding: 5%;
 }
 
@@ -92,6 +103,8 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
 .feature-desc{
     font-family: 'Montserrat', 'sans-serif';
     font-weight: 600;
+    font-size: 1.5rem;  
+    line-height: 1.5;
     /* line-height: 1.5rem; */
 }
 
@@ -102,9 +115,7 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
 /* Testimonial Section */
 
 #testimonials{
-    text-align: center;
     background-color: #ef8172;
-    color: #fff;
 }
 
 .testimonial-image{
@@ -113,9 +124,13 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
     border-radius: 100%;
 }
 
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 #press{
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -124,15 +139,10 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
     margin: 20px 20px 50px;
 }
 
-.carousel-item{
-    padding: 7% 15%;
-
-}
 
 /* Pricing Section */
 #pricing{
     padding: 100px;
-    text-align: center;
 }
 
 .pricing-column{
@@ -140,19 +150,20 @@ h3 {  font-family: 'Montserrat', 'sans-serif';
 }
 
 /* Call to Action Section */
-#cta{
-    background-color: #ff4c68;
-    text-align: center;
-    padding: 3% 15% 7%;
+.cta-heading{
+    font-size: 3.5rem;
+    line-height: 1.5; 
+    font-weight: 600;
+    color: #fff;
 }
 
 /* Footer */
-#footer{
-    text-align: center;
+.social-icon{
+    margin: 20px 10px;
 }
 
 @media (max-width: 1028px){
-    #title{
+    #title .container-fluid{
         text-align: center;
     }
     .title-image{
